--- a/emby.yaml
+++ b/emby.yaml
@@ -41,4 +41,5 @@ payload:
   - IP-CIDR,176.119.150.180/32 #Orange
   - DOMAIN-SUFFIX,charontv.com #Charon
   - IP-CIDR,172.67.221.252/32 #Paul
+  - IP-CIDR,104.21.38.104/32 #Paul
 
