--- a/emby.yaml
+++ b/emby.yaml
@@ -42,4 +42,5 @@ payload:
   - DOMAIN-SUFFIX,charontv.com #Charon
   - IP-CIDR,172.67.221.252/32 #Paul
   - IP-CIDR,104.21.38.104/32 #Paul
+  - DOMAIN-SUFFIX,bangumi.ca #NyaMedia
 
