--- a/emby.yaml
+++ b/emby.yaml
@@ -3,7 +3,7 @@
 payload:
   - DOMAIN-KEYWORD,ccemby #cc公益
   - DOMAIN-SUFFIX,carryz.net #cc公益
-  - DIMAIN-SUFFIX,coemn.com #cc公益
+  - DOMAIN-SUFFIX,coemn.com #cc公益
   - IP-CIDR,172.67.147.228/32 #cc公益
   - IP-CIDR,104.21.28.238/32 #cc公益
   - IP-CIDR,129.150.48.48/32 #cc公益
