--- a/emby.yaml
+++ b/emby.yaml
@@ -33,7 +33,7 @@ payload:
   - IP-CIDR,172.67.197.145/32  #纸片人
   - IP-CIDR,104.21.52.93/32  #纸片人
   - IP-CIDR,89.58.18.111/32  #纸片人
-  - DOMAIN-KEYWORD,pilipiliultra  #PiliPili
+  - DOMAIN-KEYWORD,pilipili  #PiliPili
   - IP-CIDR,202.61.203.218/32  #PiliPili
   - DOMAIN-SUFFIX,otv.icu #Orange
   - IP-CIDR,147.78.247.122/32 #Orange
