--- a/emby.yaml
+++ b/emby.yaml
@@ -47,5 +47,5 @@ payload:
   - IP-CIDR,104.21.38.104/32 #Paul
   - DOMAIN-SUFFIX,bangumi.ca #NyaMedia
   - DOMAIN-KEYWORD,lyrebirdemby #lyrebird
-  - DOMAIN-SUFFIX,micu.hk   #MICU
+  - DOMAIN-SUFFIX,micu.mk #MICU
 
