--- a/emby.yaml
+++ b/emby.yaml
@@ -20,6 +20,7 @@ payload:
   - IP-CIDR,193.123.232.141/32 #peach
   - IP-CIDR,141.147.166.107/32 #peach
   - DOMAIN-SUFFIX,ohhhh.org #NMEmby
+  - DOMAIN-SUFFIX,hovervan.org #NMEmby
   - IP-CIDR,172.67.212.126/32 #NMEmby
   - IP-CIDR,104.21.16.126/32 #NMEmby
   - DOMAIN-KEYWORD,mjjemby #MJJ
