--- a/emby.yaml
+++ b/emby.yaml
@@ -51,6 +51,7 @@ payload:
   - DOMAIN-KEYWORD,lyrebirdemby #lyrebird
   - DOMAIN-KEYWORD,7777777 # 飞越彩虹
   - DOMAIN-KEYWORD,581658 # 飞越彩虹
+  - IP-CIDR,5.45.109.91/32 #飞跃彩虹
   - DOMAIN-KEYWORD,micu #MICU
   - DOMAIN-KEYWORD,catlinks #StarCat
   - DOMAIN-SUFFIX,miui.ovh #野兽餐厅
