--- a/emby.yaml
+++ b/emby.yaml
@@ -19,6 +19,7 @@ payload:
   - DOMAIN-KEYWORD,embymv #peach
   - IP-CIDR,193.123.232.141/32 #peach
   - IP-CIDR,141.147.166.107/32 #peach
+  - IP-CIDR,168.138.45.100/32 #peach
   - DOMAIN-SUFFIX,ohhhh.org #NMEmby
   - DOMAIN-SUFFIX,hovervan.org #NMEmby
   - IP-CIDR,172.67.212.126/32 #NMEmby
