--- a/emby.yaml
+++ b/emby.yaml
@@ -59,6 +59,7 @@ payload:
   - DOMAIN-KEYWORD,catlinks #StarCat
   - DOMAIN-KEYWORD,puddingcat #StarCat
   - DOMAIN-SUFFIX,miui.ovh #野兽餐厅
+  - DOMAIN-SUFFIX,811861.xyz  #AWA
 
   
 
