--- a/emby.yaml
+++ b/emby.yaml
@@ -60,6 +60,7 @@ payload:
   - DOMAIN-KEYWORD,puddingcat #StarCat
   - DOMAIN-SUFFIX,miui.ovh #野兽餐厅
   - DOMAIN-SUFFIX,811861.xyz  #AWA
+  - IP-CIDR,38.58.181.218/32  #AWA
 
   
 
