--- a/emby.yaml
+++ b/emby.yaml
@@ -63,6 +63,7 @@ payload:
   - DOMAIN-SUFFIX,811861.xyz  #AWA
   - IP-CIDR,38.58.181.218/32  #AWA
   - DOMAIN-SUFFIX,nanflix.net #天南小筑
+  - DOMAIN-SUFFIX,sfcj.org   #非越
 
   
 
