--- a/emby.yaml
+++ b/emby.yaml
@@ -64,6 +64,6 @@ payload:
   - IP-CIDR,38.58.181.218/32  #AWA
   - DOMAIN-SUFFIX,nanflix.net #天南小筑
   - DOMAIN-SUFFIX,sfcj.org   #非越
-
+  - DOMIAN-SUFFIX,alphatvapp.top #alphaTV
   
 
