--- a/emby.yaml
+++ b/emby.yaml
@@ -62,8 +62,10 @@ payload:
   - DOMAIN-SUFFIX,miui.ovh #野兽餐厅
   - DOMAIN-SUFFIX,811861.xyz  #AWA
   - IP-CIDR,38.58.181.218/32  #AWA
-  - DOMAIN-SUFFIX,nanflix.net #天南小筑
+  - DOMAIN-SUFFIX,nanflix.net #nanflix
+  - IP-CIDR,89.58.10.209/32 #nanflix
   - DOMAIN-SUFFIX,sfcj.org   #非越
   - DOMAIN-SUFFIX,alphatvapp.top #alphaTV
+  
   
 
