--- a/emby.yaml
+++ b/emby.yaml
@@ -69,6 +69,7 @@ payload:
   - IP-CIDR,89.58.10.209/32 #nanflix
   - DOMAIN-SUFFIX,sfcj.org   #非越
   - DOMAIN-SUFFIX,alphatvapp.top #alphaTV
+  - DOMAIN-SUFFIX,favoritewife.com #起点站
   
   
 
