--- a/emby.yaml
+++ b/emby.yaml
@@ -70,6 +70,6 @@ payload:
   - DOMAIN-SUFFIX,sfcj.org   #非越
   - DOMAIN-SUFFIX,alphatvapp.top #alphaTV
   - DOMAIN-SUFFIX,favoritewife.com #起点站
-  
+  - DOMAIN-SUFFIX,nebula-media.org #nebula
   
 
