--- a/emby.yaml
+++ b/emby.yaml
@@ -71,5 +71,7 @@ payload:
   - DOMAIN-SUFFIX,alphatvapp.top #alphaTV
   - DOMAIN-SUFFIX,favoritewife.com #起点站
   - DOMAIN-SUFFIX,nebula-media.org #nebula
+  - DOMAIN-SUFFIX,auroramedia.vip #aurora
+  
   
 
