--- a/emby.yaml
+++ b/emby.yaml
@@ -71,6 +71,7 @@ payload:
   - DOMAIN-SUFFIX,alphatvapp.top #alphaTV
   - DOMAIN-SUFFIX,favoritewife.com #起点站
   - DOMAIN-SUFFIX,vban.xyz  #蘑菇
+  - DOMAIN-SUFFIX,jingzhe.pro  #惊蛰
   - DOMAIN-SUFFIX,nebula-media.org #nebula
   - DOMAIN-SUFFIX,auroramedia.vip #aurora
   
